@@ -1,3 +1,12 @@
+2012-05-11  François Dumont  <fdumont@gcc.gnu.org>
+
+	PR libstdc++/53263
+	* include/debug/safe_iterator.h (__gnu_debug::__base): Move...
+	* include/debug/functions.h: ... Here. Add debug function
+	overloads to perform checks on normal iterators when possible.
+	* include/debug/macros.h (__glibcxx_check_heap)
+	(__glibcxx_check_heap_pred): Use __gnu_debug::__base on iterator range.
+
 2012-05-10  DJ Delorie  <dj@redhat.com>
 
 	* include/bits/random.tcc (seed_seq::generate): Cast max()
